--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,7 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+# theme: jekyll-theme-minimal
 title: 電子情報学特論
 description: 電子情報学特論ホームページ
 
